# creme-brulee

./: .gitignore  Cargo.toml  LICENSE  README.md  creme-brulee.toml  justfile  shell.nix
src/: creme_brulee.rs  main.rs
src/creme_brulee/: cli.rs  config.rs
static/: 404.html  index.html
