[package]
name = "creme-brulee"
authors = ["h4rl <contact@h4rl.dev>"]
version = "0.1.0"
edition = "2024"

[dependencies]
xitca-server = { version = "0.5.0", features = ["quic"] }
xitca-service = "0.3.0"
xitca-http = { version = "0.7.1", features = ["http2", "http3", "openssl", "rustls"] }

openssl = "0.10.72"
quinn = { version = "0.11.7", features = ["ring"] }
rustls-pemfile = "2.2.0"
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt", "env-filter"] }
rustls = { version = "0.23.25", default-features = false, features = ["ring"] }

