[package]
name = "creme-brulee"
authors = ["h4rl <contact@h4rl.dev>"]
version = "0.1.0"
edition = "2024"

[dependencies]
xitca-web = { version = "0.7.1", features = ["openssl", "http2", "http3", "file", "file-io-uring", "io-uring", "codegen", "logger", "compress-gz"] }
openssl = "0.10.72"
quinn = { version = "0.11.7", features = ["ring"] }
rustls-pemfile = "2.2.0"
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt", "env-filter", "ansi"] }
rustls = { version = "0.23.25", default-features = false, features = ["ring"] }
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
toml = "0.8.22"
xitca-service = "0.3.0"
