[package]
name = "creme-brulee"
authors = ["h4rl <contact@h4rl.dev>"]
version = "0.1.0"
edition = "2024"

[dependencies]
openssl = "0.10.72"
rustls-pemfile = "2.2.0"
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = ["fmt", "env-filter", "ansi"] }
rustls = { version = "0.23.25", default-features = false, features = ["ring"] }
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
toml = "0.8.22"
axum = { version = "0.8.4", features = ["http2"] }
tokio = { version = "1.45.1", features = ["full"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
axum-extra = "0.10.1"
tower-http = { version = "0.6.6", features = ["compression-full", "decompression-full", "fs"] }
tower = "0.5.2"
clap = { version = "4.5.40", features=["derive"] }
